--- a/app/src/main/res/layout/activity_add_new_group.xml
+++ b/app/src/main/res/layout/activity_add_new_group.xml
@@ -65,6 +65,7 @@
             android:orientation="horizontal">
 
             <RelativeLayout
+                android:id="@+id/title_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp">
@@ -93,7 +94,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rc_added_gusers"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:overScrollMode="never"
                 android:background="#ffffff"/>
