--- a/app/src/main/res/layout/activity_send_feedback.xml
+++ b/app/src/main/res/layout/activity_send_feedback.xml
@@ -100,6 +100,7 @@
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:focusable="false"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:drawableRight="@drawable/drop_down_small"
