--- a/app/src/main/res/layout/activity_donations.xml
+++ b/app/src/main/res/layout/activity_donations.xml
@@ -40,7 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#ffffff"
-                android:text="View Event"
+                android:text="Donations"
                 android:padding="4dp"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@+id/back" />
