--- a/app/src/main/res/layout/fragment_home_feed.xml
+++ b/app/src/main/res/layout/fragment_home_feed.xml
@@ -26,6 +26,7 @@
                 android:paddingRight="7dp"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
+                android:layout_marginBottom="6dp"
                 android:background="#ffffff"
                 android:layout_height="wrap_content">
 
