--- a/app/src/main/res/layout/news_feed_layout.xml
+++ b/app/src/main/res/layout/news_feed_layout.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginTop="6dp"
+    android:layout_marginBottom="6dp"
     android:id="@+id/post_main"
     android:background="#ffffff"
     android:orientation="vertical">
