--- a/app/src/main/res/layout/post_image_layout.xml
+++ b/app/src/main/res/layout/post_image_layout.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_marginBottom="1dp"
+    android:layout_marginBottom="2dp"
     android:layout_height="200dp">
 
     <ImageView
@@ -12,4 +12,4 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop"/>
 
-</RelativeLayout>
+</androidx.cardview.widget.CardView>
