--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -1,101 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NewsFeedActivity">
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        app:contentInsetRight="0dp"
-        app:contentInsetLeft="0dp"
-        app:contentInsetEnd="0dp"
-        android:contentInsetEnd="0dp"
-        android:contentInsetLeft="0dp"
-        android:contentInsetRight="0dp"
-        app:contentInsetStart="0dp"
-        android:contentInsetStart="0dp"
-        android:layout_alignParentTop="true"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimaryDark">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical">
-
-            <ImageView
-                android:id="@+id/camera"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:src="@mipmap/camera_white"/>
-
-            <EditText
-                android:id="@+id/ed_search"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Search"
-                android:cursorVisible="false"
-                android:focusable="false"
-                android:drawableLeft="@drawable/search_gray"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-                android:padding="4dp"
-                android:layout_toLeftOf="@+id/notification"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@+id/camera"
-                android:background="@drawable/search_bg"/>
-
-            <RelativeLayout
-                android:id="@+id/notification"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_toLeftOf="@+id/chat"
-                android:layout_centerVertical="true">
-
-                <ImageView
-                    android:id="@+id/notification_bell"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:src="@mipmap/notification_white"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="2"
-                    android:singleLine="true"
-                    android:ellipsize="end"
-                    android:maxWidth="25dp"
-                    android:layout_margin="8dp"
-                    android:textSize="10sp"
-                    android:layout_alignParentRight="true"
-                    android:gravity="center"
-                    android:background="@drawable/notification_count"
-                    android:textColor="#fff"/>
-
-            </RelativeLayout>
-
-
-            <ImageView
-                android:id="@+id/chat"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:src="@mipmap/chat_white"/>
-
-        </RelativeLayout>
-
-    </androidx.appcompat.widget.Toolbar>
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".fragments.MyProfileFragment">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/news_feed_scroll"
-        android:layout_below="@+id/toolbar"
-        android:layout_above="@+id/bottombar"
         android:layout_width="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:fillViewport="true"
@@ -475,7 +387,7 @@
             </LinearLayout>
 
             <FrameLayout
-                android:id="@+id/profile_activity_frame"
+                android:id="@+id/profile_frag_frame"
                 android:layout_below="@+id/profile_tabs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -484,7 +396,7 @@
                 android:id="@+id/rc_my_posts"
                 android:layout_width="match_parent"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                android:layout_below="@+id/profile_activity_frame"
+                android:layout_below="@+id/profile_frag_frame"
                 android:layout_height="match_parent">
 
             </androidx.recyclerview.widget.RecyclerView>
@@ -492,5 +404,6 @@
         </RelativeLayout>
 
     </androidx.core.widget.NestedScrollView>
+
 
 </RelativeLayout>
