--- a/app/src/main/res/layout/layout_create_post.xml
+++ b/app/src/main/res/layout/layout_create_post.xml
@@ -50,16 +50,52 @@
                     android:orientation="vertical"
                     android:paddingLeft="10dp">
 
-                    <com.eleganzit.volunteerifyngo.utils.TextViewRobotoBold
-                        android:id="@+id/event_name"
-                        android:layout_width="fill_parent"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="-3dp"
-                        android:ellipsize="end"
-                        android:singleLine="true"
-                        android:text="Lorem Ipsum"
-                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-                        android:textColor="#000" />
+                        android:layout_gravity="center_vertical"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <com.eleganzit.volunteerifyngo.utils.TextViewRobotoBold
+                            android:id="@+id/event_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="-3dp"
+                            android:layout_gravity="center_vertical"
+                            android:gravity="center_vertical"
+                            android:ellipsize="end"
+                            android:singleLine="true"
+                            android:text="Lorem Ipsum"
+                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                            android:textColor="#000" />
+
+                        <com.eleganzit.volunteerifyngo.utils.TextViewRobotoRegular
+                            android:id="@+id/txt_with"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="#000000"
+                            android:layout_marginTop="-3dp"
+                            android:layout_gravity="center_vertical"
+                            android:gravity="center_vertical"
+                            android:visibility="gone"
+                            android:text=" - with"
+                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
+
+                        <com.eleganzit.volunteerifyngo.utils.TextViewRobotoRegular
+                            android:id="@+id/with"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="#000000"
+                            android:layout_marginTop="-3dp"
+                            android:singleLine="true"
+                            android:ellipsize="end"
+                            android:layout_gravity="center_vertical"
+                            android:gravity="center_vertical"
+                            android:layout_marginLeft="5dp"
+                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
+
+                    </LinearLayout>
 
                     <LinearLayout
                         android:id="@+id/privacy"
@@ -182,6 +218,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/toolbar"
         android:background="#d7d7d7"
+        android:layout_marginBottom="48dp"
         android:orientation="vertical"
         android:visibility="gone">
 
@@ -241,6 +278,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/toolbar"
         android:background="#ffffff"
+        android:layout_marginBottom="48dp"
         android:orientation="vertical"
         android:visibility="gone">
 
@@ -258,6 +296,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/toolbar"
         android:background="#ffffff"
+        android:layout_marginBottom="48dp"
         android:orientation="vertical"
         android:visibility="gone">
 
