--- a/app/src/main/res/layout/activity_donations.xml
+++ b/app/src/main/res/layout/activity_donations.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     tools:context=".NewsFeedActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -50,7 +51,7 @@
 
     </androidx.appcompat.widget.Toolbar>
 
-    <androidx.recyclerview.widget.RecyclerView
+   <!-- <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rc_donations"
         android:layout_below="@+id/toolbar"
         android:layout_width="match_parent"
@@ -58,5 +59,5 @@
         android:layout_height="match_parent">
 
     </androidx.recyclerview.widget.RecyclerView>
-
+-->
 </RelativeLayout>
