--- a/app/src/main/res/layout/activity_opportunity.xml
+++ b/app/src/main/res/layout/activity_opportunity.xml
@@ -46,6 +46,15 @@
                 android:layout_toRightOf="@+id/back" />
 
 
+            <ImageView
+                android:id="@+id/options"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@mipmap/menu_icon"/>
+
+
         </RelativeLayout>
 
     </androidx.appcompat.widget.Toolbar>
@@ -186,24 +195,26 @@
                         android:background="#ffffff"
                         android:gravity="center"
                         android:weightSum="2"
-                        android:paddingBottom="2dp"
+                        android:paddingBottom="5dp"
+                        android:paddingTop="5dp"
                         android:layout_marginTop="1dp"
                         android:layout_height="wrap_content">
 
                         <LinearLayout
+                            android:id="@+id/lin_applied"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center"
-                            android:paddingBottom="5dp"
-                            android:layout_weight="1"
+                            android:layout_weight="0.5"
                             android:layout_alignParentLeft="true"
                             android:orientation="vertical">
 
-                            <ImageView
-                                android:id="@+id/img_interested"
+                            <com.eleganzit.amigo.utils.TextViewRobotoBold
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@mipmap/apply_icon" />
+                                android:textColor="#595959"
+                                android:text="101"
+                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
 
                             <com.eleganzit.amigo.utils.TextViewRobotoRegular
                                 android:id="@+id/txt_interested"
@@ -211,33 +222,37 @@
                                 android:layout_height="wrap_content"
                                 android:textColor="#919191"
                                 android:singleLine="true"
+                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                                 android:ellipsize="end"
-                                android:text="Apply"/>
+                                android:text="Candidate Applied"/>
 
                         </LinearLayout>
 
                         <LinearLayout
+                            android:id="@+id/lin_rejected"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:layout_weight="1"
-                            android:paddingBottom="5dp"
                             android:layout_centerHorizontal="true"
                             android:orientation="vertical">
 
-                            <ImageView
+                            <com.eleganzit.amigo.utils.TextViewRobotoBold
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@mipmap/icon_share"/>
+                                android:textColor="#595959"
+                                android:text="0"
+                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
 
                             <com.eleganzit.amigo.utils.TextViewRobotoRegular
                                 android:id="@+id/txt_share"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:textColor="#919191"
+                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                                 android:singleLine="true"
                                 android:ellipsize="end"
-                                android:text="Share"/>
+                                android:text="Rejected"/>
 
                         </LinearLayout>
 
