--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -48,10 +48,11 @@
 
     </androidx.appcompat.widget.Toolbar>
 
-    <androidx.core.widget.NestedScrollView
+    <ScrollView
         android:id="@+id/news_feed_scroll"
         android:layout_below="@+id/toolbar"
         android:layout_above="@+id/bottombar"
+        android:scrollbars="none"
         android:layout_width="match_parent"
         android:fillViewport="true"
         android:layout_height="match_parent">
@@ -59,6 +60,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:background="#CFD0D4"
+            android:visibility="gone"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:descendantFocusability="blocksDescendants">
@@ -445,7 +447,7 @@
 
         </LinearLayout>
 
-    </androidx.core.widget.NestedScrollView>
+    </ScrollView>
 
 
 </RelativeLayout>
