--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -95,33 +95,6 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/lin_donations"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:background="#ffffff"
-        android:layout_marginBottom="1dp"
-        android:focusable="true"
-        android:orientation="horizontal"
-        android:foreground="?android:attr/selectableItemBackground"
-        >
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:src="@mipmap/menu_donation_icon"
-            />
-        <com.eleganzit.amigo.utils.TextViewRobotoRegular
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#000000"
-            android:layout_marginLeft="5dp"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-            android:layout_gravity="center"
-            android:text="Donations"/>
-    </LinearLayout>
-
-    <LinearLayout
         android:id="@+id/lin_opportunity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -149,7 +122,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/lin_invite"
+        android:id="@+id/lin_following"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
@@ -172,11 +145,11 @@
             android:layout_marginLeft="5dp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:layout_gravity="center"
-            android:text="Invite Friends"/>
+            android:text="Following"/>
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/lin_following"
+        android:id="@+id/lin_donation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
@@ -190,7 +163,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
-            android:src="@mipmap/menu_following_icon"
+            android:src="@mipmap/menu_donate_icon"
             />
         <com.eleganzit.amigo.utils.TextViewRobotoRegular
             android:layout_width="wrap_content"
@@ -199,7 +172,7 @@
             android:layout_marginLeft="5dp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:layout_gravity="center"
-            android:text="Following"/>
+            android:text="Donation"/>
     </LinearLayout>
 
     <LinearLayout
@@ -227,114 +200,6 @@
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:layout_gravity="center"
             android:text="Calender"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/lin_refer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:focusable="true"
-        android:background="#ffffff"
-        android:layout_marginBottom="1dp"
-        android:orientation="horizontal"
-        android:foreground="?android:attr/selectableItemBackground"
-        >
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:src="@mipmap/menu_refer_icon"
-            />
-        <com.eleganzit.amigo.utils.TextViewRobotoRegular
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#000000"
-            android:layout_marginLeft="5dp"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-            android:layout_gravity="center"
-            android:text="Refer an Entity"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/lin_feedback"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:focusable="true"
-        android:background="#ffffff"
-        android:layout_marginBottom="1dp"
-        android:orientation="horizontal"
-        android:foreground="?android:attr/selectableItemBackground"
-        >
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:src="@mipmap/menu_feedback_icon"
-            />
-        <com.eleganzit.amigo.utils.TextViewRobotoRegular
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#000000"
-            android:layout_marginLeft="5dp"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-            android:layout_gravity="center"
-            android:text="Send Feedback"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/lin_rateus"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:focusable="true"
-        android:background="#ffffff"
-        android:layout_marginBottom="1dp"
-        android:orientation="horizontal"
-        android:foreground="?android:attr/selectableItemBackground"
-        >
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:src="@mipmap/menu_rateus_icon"
-            />
-        <com.eleganzit.amigo.utils.TextViewRobotoRegular
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#000000"
-            android:layout_marginLeft="5dp"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-            android:layout_gravity="center"
-            android:text="Rate us on Play Store"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/lin_campaigns"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:focusable="true"
-        android:background="#ffffff"
-        android:layout_marginBottom="1dp"
-        android:orientation="horizontal"
-        android:foreground="?android:attr/selectableItemBackground"
-        >
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:src="@mipmap/menu_campaigns_icon"
-            />
-        <com.eleganzit.amigo.utils.TextViewRobotoRegular
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#000000"
-            android:layout_marginLeft="5dp"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-            android:layout_gravity="center"
-            android:text="Campaigns"/>
     </LinearLayout>
 
     <LinearLayout
