--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -52,17 +53,28 @@
 
             </LinearLayout>
 
-            <include layout="@layout/register_input1"/>
+            <include
+                android:id="@+id/register_input1"
+                layout="@layout/register_input1"/>
 
-            <include layout="@layout/register_input2"
+            <include
+                android:id="@+id/register_input2"
+                layout="@layout/register_input2"
                 android:visibility="gone"/>
-            <include layout="@layout/register_input3"
+            <include
+                android:id="@+id/register_input3"
+                layout="@layout/register_input3"
                 android:visibility="gone"/>
-            <include layout="@layout/register_input4"
+            <include
+                android:id="@+id/register_input4"
+                layout="@layout/register_input4"
                 android:visibility="gone"/>
-            <include layout="@layout/register_input5"
+            <include
+                android:id="@+id/register_input5"
+                layout="@layout/register_input5"
                 android:visibility="gone"/>
-            <include layout="@layout/register_input6"
+            <include android:id="@+id/register_input6"
+                layout="@layout/register_input6"
                 android:visibility="gone"/>
 
             <LinearLayout
@@ -133,17 +145,27 @@
 
     </LinearLayout>
 
-    <include layout="@layout/fab1"/>
+    <include
+        android:id="@+id/fab1"
+        layout="@layout/fab1"/>
 
-    <include layout="@layout/fab2"
+    <include
+        android:id="@+id/fab2"
+        layout="@layout/fab2"
         android:visibility="gone"/>
-    <include layout="@layout/fab3"
+    <include
+        android:id="@+id/fab3"
+        layout="@layout/fab3"
         android:visibility="gone"/>
-    <include layout="@layout/fab4"
+    <include android:id="@+id/fab4"
+        layout="@layout/fab4"
         android:visibility="gone"/>
-    <include layout="@layout/fab5"
+    <include android:id="@+id/fab5"
+        layout="@layout/fab5"
         android:visibility="gone"/>
-    <include layout="@layout/fab6"
+    <include android:id="@+id/fab6"
+        layout="@layout/fab6"
         android:visibility="gone"/>
 
 </RelativeLayout>
+</layout>
