--- a/app/src/main/res/layout/fab3.xml
+++ b/app/src/main/res/layout/fab3.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
 <com.google.android.material.floatingactionbutton.FloatingActionButton
     android:id="@+id/next3"
     android:layout_width="wrap_content"
@@ -14,3 +15,4 @@
     app:fabSize="normal"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto" />
+</layout>
