--- a/app/src/main/res/layout/register_input5.xml
+++ b/app/src/main/res/layout/register_input5.xml
@@ -45,7 +45,7 @@
             android:layout_height="wrap_content"
             android:hint="NAME OF STATE/UNION TERRITORY"
             android:imeOptions="actionDone"
-            android:inputType="textPassword"
+            android:inputType="text"
             android:singleLine="true" />
 
     </com.google.android.material.textfield.TextInputLayout>
