--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -139,6 +140,7 @@
                 android:textColor="@color/colorLightBlue"
                 android:gravity="center"
                 android:text="SIGN UP"
+                android:padding="10dp"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -149,3 +151,4 @@
     </RelativeLayout>
 
 </RelativeLayout>
+</layout>
