--- a/app/src/main/res/layout/fab6.xml
+++ b/app/src/main/res/layout/fab6.xml
@@ -1,18 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-<com.google.android.material.floatingactionbutton.FloatingActionButton
-    android:id="@+id/next6"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:src="@drawable/right_white"
-    android:layout_alignParentBottom="true"
-    android:layout_alignParentRight="true"
-    app:backgroundTint="@color/appGreen"
-    app:borderWidth="0dp"
-    android:layout_marginRight="30dp"
-    android:layout_marginBottom="20dp"
-    app:elevation="6dp"
-    app:fabSize="normal"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" />
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <com.github.jorgecastilloprz.FABProgressCircle
+        android:id="@+id/fabProgressCircle"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        app:arcColor="#1b75cf"
+        app:reusable="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="10dp"
+        app:arcWidth="3dp"
+        app:finalIcon="@drawable/white_check_small">
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/next6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/right_white"
+            app:backgroundTint="@color/appGreen"
+            app:borderWidth="0dp"
+            app:elevation="6dp"
+            app:fabSize="normal" />
+
+    </com.github.jorgecastilloprz.FABProgressCircle>
 </layout>
