--- a/app/src/main/res/layout/activity_edit_education.xml
+++ b/app/src/main/res/layout/activity_edit_education.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -281,4 +282,5 @@
 
 
 </RelativeLayout>
+</layout>
 
