--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,11 @@
         <item name="android:ambientShadowAlpha" tools:targetApi="lollipop">0.05</item>
         <item name="android:spotShadowAlpha" tools:targetApi="lollipop">0.3</item>
     </style>
+    <style name="AlertDialogCustom" parent="@android:style/Animation.Dialog">
+        <item name="android:typeface">sans</item>
 
+
+    </style>
     <style name="Widget.CalendarView.Custom" parent="android:Widget.CalendarView">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -31,9 +35,29 @@
         parent="Widget.Design.BottomSheet.Modal">
         <item name="android:background">@drawable/bottom_sheet_bg</item>
     </style>
+    <style name="HintInputTextAppearance" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">#c6c6c6</item>
+        <item name="android:textSize">22dp</item>
+        <item name="colorAccent">#c6c6c6</item>
+    </style>
+    <style name="InputTextAppearance" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">#ff000000</item>
+        <item name="android:textColorHint">#ff000000</item>
+        <item name="android:textSize">20sp</item>
+        <item name="colorAccent">#ff000000</item>
+    </style>
+
+    <style name="ErrorTextAppearance" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">#ffff0000</item>
+        <item name="android:textColorHint">#ffff0000</item>
+        <item name="android:textSize">18sp</item>
+        <item name="colorAccent">#ffff0000</item>
+    </style>
     <style name="TextLabel" parent="TextAppearance.AppCompat">
         <!-- Hint color and label color in FALSE state -->
         <item name="android:textColorHint">#c6c6c6</item>
+        <item name="android:textColor">#c6c6c6</item>
+
         <item name="android:textSize">20sp</item>
         <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
         <item name="colorAccent">#c6c6c6</item>
