--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorPrimaryDark</item>
         <item name="bottomSheetDialogTheme">@style/AppBottomSheetDialogTheme</item>
+        <item name="android:windowDisablePreview">true</item>
 
         <item name="android:ambientShadowAlpha" tools:targetApi="lollipop">0.05</item>
         <item name="android:spotShadowAlpha" tools:targetApi="lollipop">0.3</item>
@@ -53,12 +54,12 @@
         <item name="android:textSize">18sp</item>
         <item name="colorAccent">#ffff0000</item>
     </style>
-    <style name="TextLabel" parent="TextAppearance.AppCompat">
+    <style name="TextLabel" parent="Base.Widget.MaterialComponents.TextInputLayout">
         <!-- Hint color and label color in FALSE state -->
         <item name="android:textColorHint">#c6c6c6</item>
         <item name="android:textColor">#c6c6c6</item>
 
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">15sp</item>
         <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
         <item name="colorAccent">#c6c6c6</item>
         <item name="colorControlNormal">#c6c6c6</item>
