--- a/app/src/main/res/layout/activity_login_session.xml
+++ b/app/src/main/res/layout/activity_login_session.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -19,7 +20,7 @@
 
         <ImageView
             android:id="@+id/logo"
-            android:src="@drawable/amigo_logo1"
+            android:src="@drawable/amigo"
             android:layout_width="130dp"
             android:layout_marginTop="40dp"
             android:layout_height="130dp"
@@ -119,3 +120,4 @@
     </RelativeLayout>
 
 </RelativeLayout>
+    </layout>
