--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -155,6 +155,7 @@
                             android:background="@drawable/profile_ring">
 
                             <ImageView
+                                android:id="@+id/circle_user"
                                 android:layout_width="70dp"
                                 android:layout_height="70dp"
                                 android:layout_margin="2dp"
@@ -185,6 +186,7 @@
                                 android:layout_height="wrap_content"
                                 android:singleLine="true"
                                 android:ellipsize="end"
+                                android:id="@+id/username"
                                 android:textColor="#000"
                                 android:text="Username"
                                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
