--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -137,7 +137,7 @@
                     android:id="@+id/logo"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/amigo_logo1" />
+                    android:src="@drawable/amigo" />
             </LinearLayout>
 
 
