--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -19,7 +19,7 @@
 
         <ImageView
             android:id="@+id/logo"
-            android:src="@drawable/amigo_logo1"
+            android:src="@drawable/amigo"
             android:layout_width="130dp"
             android:layout_height="130dp"
             android:layout_centerInParent="true"/>
